plugins {
	id 'java'
	id 'jacoco'
}

group = 'com.yupzip.json'
version = '4.1.0'

compileJava {
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

repositories {
	mavenCentral()
}

dependencies {

	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.21'
	implementation 'tools.jackson.core:jackson-databind:3.1.4'

	testImplementation 'org.junit.jupiter:junit-jupiter-api:6.0.2'
	testImplementation 'org.junit.jupiter:junit-jupiter-engine:6.0.2'
	testImplementation 'org.junit.platform:junit-platform-launcher:6.0.2'
	testImplementation 'org.junit.jupiter:junit-jupiter-params:6.0.2'
	testImplementation 'org.mockito:mockito-core:5.21.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.21.0'
}

test {
	useJUnitPlatform()
}

jacocoTestReport {
	reports {
		xml.required = true
		html.required = true
	}
}
